css/main-1.6.css
/** embedded font double rendering issue fix -- https://css-tricks.com/forums/discussion/10449/weird-mobile-safari-font-face-problem-font-doubled-and-offset-to-the-left-/p1 **/
h1, h2, h3, h4, h5, h6 { /*reset for mobile browsers */
    font-weight: normal;
}

/* ==========================================================================
   HTML5 Boilerplate styles - h5bp.com (generated via initializr.com)
   ========================================================================== */

html,
button,
input,
select,
textarea {
    color: #222;
}

body {
    font-size: 1em;
    line-height: 1.4;
}

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}
a {
    color: #b1bf92;
    text-decoration: none;
}
hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

img {
    vertical-align: middle;
}

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

textarea {
    resize: vertical;
}

.chromeframe {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}


/* ===== Initializr Styles ==================================================
   Author: Bradley Greenwood
   ========================================================================== */

body {
    font: 16px/26px Helvetica, Helvetica Neue, Arial;
}

.wrapper {
    height: 100%;
    position: relative;
    width: 90%;
    margin: 0 5%;
}


/* =============================================================================
   GOOGLE MAPS
   ========================================================================== */
#gmap {
    text-align: center;
    margin: 20px auto 20px auto;
}

#gmap iframe {
    width: 93%;
    height: 200px;

    border: 10px solid #090909;

    -ms-border-radius: 8px;
    -o-border-radius: 8px;
    -moz-border-radius: 8px;
    -webkit-border-radius: 8px;
    border-radius: 8px;
}

#gmap small a,
#gmap small a:active,
#gmap small a:visited {
    color: #b1bf92;
    text-decoration: none;
    outline: none;
}

#gmap small a:hover {
    color: #b1bf92;
    text-decoration: underline;
    outline: none;
}

/* ===================
    Theme
   =================== */

.header-container {
    position:absolute;
    bottom:20px;
    width: 100%;
    background: black;
    z-index: 10;
    /* Fallback for web browsers that doesn't support RGBa */
    background: rgb(0, 0, 0);
    /* RGBa with 0.9 opacity */
    background: rgba(0, 0, 0, 0.8);
    /* For IE 5.5 - 7*/
    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#CC000000, endColorstr=#CC000000);
    /* For IE 8*/
    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#CC000000, endColorstr=#CC000000)";
}

.title {
    color: black;
}
#introtext {
    display: block;
    padding: 10px 0 10px 0;
    margin-bottom: 300px;
    background: black;

    -ms-border-radius: 8px;
    -o-border-radius: 8px;
    -moz-border-radius: 8px;
    -webkit-border-radius: 8px;
    border-radius: 8px;

    /* Fallback for web browsers that doesn't support RGBa */
    background: rgb(0, 0, 0);
    /* RGBa with 0.7 opacity */
    background: rgba(0, 0, 0, 0.4);
    /* For IE 5.5 - 7*/
    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#B2000000, endColorstr=#B2000000);
    /* For IE 8*/
    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#B2000000, endColorstr=#B2000000)";
}

#introtext .head-nichole {
    font-family: "Indie Flower", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
    font-size: 2em;
    line-height: 100%;
}
#introtext .amp {
    position: relative;
    top: 19px;
    margin-left: -10px;
    font-size: 0.7em;
}
#introtext .head-rob {
    font-family: "Indie Flower", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
    font-size: 2em;
    line-height: 100%;
}
#introtext .date {
    margin-top: 10px;
    font-family: "Indie Flower", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
    font-size: 1em;
}

/* ==============
    MOBILE: Menu
   ============== */

nav {
    z-index: 42;
}

nav ul {
    font-family:"futura_ltbook",Arial,sans-serif;
    font-weight: normal;
    margin: 0;
    padding: 0;
}

nav a {
    display: block;
    margin-bottom: 10px;
    padding: 5px 0;
    text-align: center;
    text-decoration: none;
    font-weight: bold;
    color: white;
    background: transparent;
    white-space: nowrap;
    outline: none;
}

nav li a:hover {
    color: #fff;
    background: #b1bf92;
    text-decoration: none;
    outline: none;
}
nav li a.selected {
    color: #fff;
    background: #b1bf92;
    text-decoration: none;
    outline: none;
}

/** firefox remove outline **/
nav ul li a:focus {outline:none;}
nav ul li a::-moz-focus-inner {border:0;}



/* ==============
    MOBILE: Main
   ============== */

.main {
    padding: 5% 0;
}
.main header {
    float: left;
    width: 80%;
}

/* ==========================================================================
   Brad's custom styles
   ========================================================================== */
* { margin: 0; padding: 0; }
html {

}

body {
    font-family: "futura_ltbook", "HelveticaNeueLTStdRegular","HelveticaNeue", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
    color: #fff;
    text-align: center;

}

#bg-image {
    position: fixed; 
    top: -50%; 
    left: -50%; 
    width: 200%; 
    height: 200%;
}
#bg-image img {
    position: absolute; 
    top: 0; 
    left: 0; 
    right: 0; 
    bottom: 0; 
    margin: auto; 
    min-width: 50%;
    min-height: 50%;
}

#bg-container {

}
/* ... */

